# old-stuff

hse/course_02/CS/ah/: .gitignore
hse/course_02/CS/ah/04/: 01.cpp  02.cpp  03.cpp  04.cpp
hse/course_02/CS/ah/05/: 01.cpp  02.cpp  03.cpp
hse/course_02/CS/ah/06/: 01.cpp  02.cpp  03.cpp
hse/course_02/CS/ah/07/: 01.S  02.S  03.S  04.S  05.S  06.S
hse/course_02/CS/ah/08/: 01.S  02.S  03.S  04.S  04.c  05.S  06.S  06.c  07.S
hse/course_02/CS/ah/09/: 04.cpp  05.cpp
hse/course_02/CS/ah/12/: 01.cpp  02.cpp  03.cpp  04.cpp  06.cpp
hse/course_02/CS/ah/13/: 01.cpp  02.cpp  03.cpp  04.cpp
hse/course_02/CS/ah/14/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp
hse/course_02/CS/ah/15/: 01.cpp  02.cpp  03.cpp  04.cpp
hse/course_02/CS/ah/16/: 01.cpp  02.cpp  03.cpp
hse/course_02/CS/ah/17/: 01.cpp  02.cpp  03.cpp
hse/course_02/CS/ah/18/: 01.cpp  02.cpp  03.cpp  04.cpp
hse/course_02/CS/kosmach/: .gitignore
hse/course_02/CS/kosmach/07/: 1.S  2.S  3.S  4.S  5.S  6.S
hse/course_02/CS/kosmach/08/: 1.S  2.S  3.S  3.c  3.cpp  4.S  4.c  5.S  5main.S  6.S  7.S  7new.S  data  gc.cpp  jmp.S
hse/course_02/CS/kosmach/09/: 1.cpp
hse/course_02/CS/leo/: .gitignore  CMakeLists.txt  main.cpp
hse/course_02/CS/leo/mz01/: .3.c.swp  1.cc  2.cc  3.c  4.c  input2  input4  result2  test2.py  test4.py
hse/course_02/CS/leo/sm02/: input  input_0  input_1  input_2
hse/course_02/CS/leo/sm02/thithA/: alex
hse/course_02/CS/leo/sm04/: 1.cc  2.cc  3.cc  4.cc  a.sh  thith.cc
hse/course_02/CS/leo/sm05/: 1.cc  2.cc  3.cc  4.c  4.cc
hse/course_02/CS/leo/sm06/: 1.c  2.c  3.cc  4.c
hse/course_02/CS/leo/sm07/: 1.S  2.S  3.S  4.S  5.S  6.S
hse/course_02/CS/leo/sm08/: 1.S  2.S  3.S  4.S  5.S  6.S  test.S  test.c
hse/course_02/CS/leo/sm09/: 1.cc  2.cc  3.c  4.c  5.cc  6.c
hse/course_02/CS/leo/sm11/: 1.cc  2.c
hse/course_02/CS/leo/sm12/: .1.c.swp  1.c  2.c  3.c  4.c  5.cc  6.c  test.c  thith
hse/course_02/CS/leo/sm13/: 1.cc  2.c  3.c  4.c  5.cc  6.cc  sample.elf
hse/course_02/CS/leo/sm13/test/: 1.c  1.cc  asm.S  intc.h
hse/course_02/CS/leo/sm14/: 1.cc  2.cc  3.cc  4.cc  5.cc  test
hse/course_02/CS/leo/sm15/: 1.cc  2.cc  3.cc  4.cc  4.test.cc  script.py
hse/course_02/CS/leo/sm16/: 1.cc  2.cc  3.cc  4.cc  test.py  test2.py  test3.py
hse/course_02/CS/leo/sm17/: 1.cc  2.cc  3.cc  4.cc  pile_of_shit.cc
hse/course_02/CS/leo/sm18/: 1.cc  2.cc  3.cc  4.cc  file  wrap.cc
hse/course_02/CS/leo/sm19/: 2.cc  3.cc  4.cc  4.ou
hse/course_02/CS/leo/sm20/: 1.cc  2.cc
hse/course_02/KangarooMessengerClient/: .gitignore  README.md  pom.xml
hse/course_02/KangarooMessengerServer/: .gitignore  README.md  initDB.sql  pom.xml
hse/course_02/RooshaClient/: .gitignore  MANIFEST.md  README.md  pom.xml
hse/course_02/coursework/lua/src/: Makefile  build.sh  clean.sh  runluacode.c  wrap.js
hse/course_02/coursework/test/: .gitignore  runtest.sh  testfunc.js
hse/course_02/coursework/test/browser/: browser_test.html  (+1 more)
hse/course_03/LamportMutex/: .gitignore  LICENSE  README.md  pom.xml
hse/course_03/ProgLangs/01/: CMakeLists.txt
hse/course_03/ProgLangs/01/c/: _pywidgets.c
hse/course_03/ProgLangs/01/cxx/: widgets.cc
hse/course_03/ProgLangs/01/headers/: _pywidgets.h  widgets.h
hse/course_03/ProgLangs/01/python/: pywidgets.py
hse/course_03/ProgLangs/01/tests/: test1.c
hse/course_03/ProgLangs/02/: LICENSE  README.md  pubspec.yaml
hse/course_03/ProgLangs/03/: README.md
hse/course_03/computer-networks-hw1/: .gitignore  server.go
hse/course_03/computer-networks-hw1/authentication/: inmemory_auth_manager.go  interface.go  password_encoder.go
hse/course_03/computer-networks-hw1/logic/: factorize.go
hse/course_03/computer-networks-hw1/views/: dbquery.html  factorize.html  login.html  ping.html  register.html
hse/course_03/computer-networks-hw2/: index.html  p2p.js
misc/BostonGeneTest/: .gitignore  README.md
misc/BostonGeneTest/concurrency/: .gitignore  README.md  pom.xml
misc/BostonGeneTest/user-service/: .gitignore  README.md  pom.xml
misc/BostonGeneTest/ytapi/: .gitignore  README.md  pom.xml
(+240 files in other folders)
